# cloud

./: .dockerignore  .env  .gitignore  CNAME  Cargo.toml  Dockerfile  Makefile  base.Dockerfile  build.release  build.sh  builder.Dockerfile  cloud-deb.Dockerfile  cloud.Dockerfile  log4rs.yaml
.cargo/: config.toml
.github/workflows/: docker-publish.yml
api/: Cargo.toml
callback/: callback.html  package-lock.json
cloud/: .env  .gitignore  Cargo.toml  Dockerfile.builder  Dockerfile.musl  application.yml  build.sh  log4rs.yaml
cloud-ui/: Cargo.toml  build.rs  index.html  vite.config.ts
cloud-ui/src/: lib.rs
cloud-ui/src/api/: aiApi.ts  cloudApi.ts  googleApi.ts  userApi.ts
cloud-ui/src/configs/: navigation.ts
cloud-ui/src/router/: index.ts
cloud-ui/src/views/cloud/: Cloud.vue
cloud-ui/web/: .gitignore  README.md  auto-imports.d.ts  package-lock.json  package.json  vite.config.ts
cloud-ui/web/src/: main.ts
cloud-ui/web/src/api/: cloudApi.ts  githubApi.ts
cloud-ui/web/src/components/navigation/: MainSidebar.vue
cloud-ui/web/src/configs/: navigation.ts
cloud-ui/web/src/configs/menus/: pages.menu.ts
cloud-ui/web/src/locales/: en.ts
cloud-ui/web/src/route/: index.ts
cloud-ui/web/src/router/: apps.routes.ts  index.ts  ui.routes.ts
cloud-ui/web/src/styles/: variables.scss
cloud-ui/web/src/view/: Cloud.vue
cloud-ui/web/src/views/cloud/: Cloud.vue
cloud/.cargo/: config.toml
cloud/.devcontainer/: devcontainer.json
cloud/.github/workflows/: docker-publish.yml
cloud/config/: file.db-shm  file.db-wal  systemd.service
cloud/httprequest/: code.http
cloud/src/: error.rs  lib.rs  plugin.rs  task.rs  util.rs
cloud/src/config/: mod.rs
cloud/src/database/: config.rs  init.sql  meta.rs  mod.rs  support.rs
cloud/src/database/meta/: cloud.rs  file.rs
cloud/src/database/meta/file/: file_block_meta.rs  file_meta.rs
cloud/src/database/support/: from.rs  serde.rs  sqlite.rs
cloud/src/domain/: mod.rs  support.rs
cloud/src/domain/mapper/: cloud_file_block.rs  cloud_meta.rs  config.rs  event_message.rs  file_block_meta.rs  file_meta.rs  mod.rs
cloud/src/domain/table/: tables.rs
cloud/src/fs/: mod.rs  vfs.rs
cloud/src/fs/dav/: dav.rs  meta.rs  mod.rs
cloud/src/fs/fuse/: cloud_filesystem.rs  cloud_fs.rs  mod.rs
cloud/src/service/: mod.rs
cloud/src/storage/: mod.rs  storage.rs  storage_facade.rs
cloud/src/storage/ali/: ali_authorization_middleware.rs  ali_storage.rs  mod.rs  support.rs  vo.rs
cloud/src/storage/baidu/: baidu_authorization_middleware.rs  baidu_storage.rs  support.rs  vo.rs
cloud/src/storage/china_mobile/: china_mobile_storage.rs  mod.rs  support.rs  vo.rs
cloud/src/storage/local/: local.rs  local_storage.rs
cloud/src/storage/onedrive/: one_drive_authorization_middleware.rs  onedrive_storage.rs  support.rs  vo.rs
cloud/src/storage/sftp/: sftp_storage.rs  support.rs
cloud/src/task/: clean.rs  re_balance.rs  rebalance.rs  refresh_quota.rs  reset.rs  scan.rs
cloud/src/web/: cloud.rs  common.rs  mod.rs
cloud/src/web/cloud/: authorize.rs  file.rs  fs.rs  meta.rs  support.rs
cloud/src/web/dav/: mod.rs
cloud/src/web/vo/: auth.rs  cloud.rs  mod.rs
cloud/support/: systemd.service
docs/: README.md
lib/api/: Cargo.toml
lib/api/src/: error.rs  lib.rs  util.rs
lib/cloud/: .env  Cargo.toml  build.rs  config.md  log4rs.yaml
lib/cloud-ui/: .gitignore  Cargo.toml  build.rs
lib/cloud-ui/src/: lib.rs
lib/cloud-ui/web/: package-lock.json  tsconfig.json  tsconfig.node.json  vite.config.ts
lib/cloud-ui/web/src/: App.vue
lib/cloud-ui/web/src/api/: cloudApi.ts
lib/cloud-ui/web/src/inter/: type.ts
lib/cloud-ui/web/src/view/: Cloud.vue
lib/cloud/src/: lib.rs  task.rs
lib/cloud/src/fs/: mod.rs  vfs.rs
lib/cloud/src/fs/dav/: cloud_dav_filesystem.rs  cluod_dav_filesystem.rs  dav.rs  meta.rs  mod.rs
lib/cloud/src/fs/fuse/: cloud_fuse_filesystem.rs  cloud_fuse_fs.rs  mod.rs
lib/cloud/src/fs/nfs/: cloud_nfs.rs  cloud_nfs_filesystem.rs  mod.rs
lib/cloud/src/task/: clean.rs  clean_cloud_file.rs  clean_recode.rs  mark_clean.rs  mod.rs  re_balance.rs  refresh_token.rs  reset.rs  scan.rs
lib/cloud/src/web/: cloud.rs  mod.rs
lib/cloud/src/web/cloud/: authorize.rs  file.rs  fs.rs  meta.rs  support.rs
lib/cloud/src/web/dav/: mod.rs
lib/cloud/src/web/vo/: cloud.rs
lib/cloud/support/: com.calm.cloud.plist
lib/persistence/: Cargo.toml
lib/persistence/src/: lib.rs
lib/persistence/src/mapper/: cloud_file_block.rs  cloud_meta.rs  config.rs  event_message.rs  file_block_meta.rs  file_meta.rs  mod.rs  user.rs
lib/persistence/src/service/: mod.rs
lib/persistence/src/support/: application_config.rs  cloud_file_block.rs  cloud_meta.rs  cloud_type.rs  config.rs  event_message.rs  file_block_meta.rs  file_meta.rs  file_meta_type.rs  meta_status.rs  mod.rs  user.rs
lib/plugin-manager/: Cargo.toml
lib/plugin-manager/src/: lib.rs
lib/service/: Cargo.toml
lib/service/src/: cloud_file_block_manager.rs  config.rs  event_message.rs  lib.rs  user_manager.rs
lib/service/src/database/: cloud_file_block_manager.rs  config.rs  event_message.rs  meta.rs  mod.rs  user_manager.rs
lib/service/src/database/meta/: cloud.rs  file.rs
lib/service/src/database/meta/file/: file_block_meta.rs  file_meta.rs
lib/service/src/meta/: cloud.rs  file.rs  mod.rs
lib/service/src/meta/file/: file_block_meta.rs  file_meta.rs
lib/storage/: Cargo.toml
lib/storage/src/: lib.rs  model.rs  storage.rs  storage_facade.rs
lib/storage/src/ali/: ali_authorization_middleware.rs  ali_storage.rs  support.rs  vo.rs
lib/storage/src/baidu/: baidu_authorization_middleware.rs  baidu_storage.rs  mod.rs  support.rs  vo.rs
lib/storage/src/local/: local_storage.rs
lib/storage/src/onedrive/: mod.rs  one_drive_authorization_middleware.rs  onedrive_storage.rs  support.rs  vo.rs
lib/storage/src/sftp/: mod.rs  sftp_storage.rs  support.rs  vo.rs
lib/storage/src/web/: auth.rs
support/: Dockerfile  base.Dockerfile  builder.Dockerfile  temp.Dockerfile
