[workspace]
members = ["lib/api", "lib/cloud-ui", "lib/persistence", "lib/cloud", "lib/service", "lib/storage", "lib/plugin-manager"]
resolver = "2"
[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1
[workspace.dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.5"
actix-identity = "0.7.1"
actix-web = "4.5.1"
actix-web-httpauth = "0.8.1"
actix-web-static-files = "4.0.1"
anyhow = "1.0.81"
async-recursion = "1.1.0"
async-ssh2-lite = { version = "0.4.7", features = ["tokio", "async-io"] }
async-trait = { version = "0.1.79" }
bytes = "1.6.0"
chrono = { version = "0.4.37", features = ["serde"] }
ctrlc = "3.4.4"
dav-server = { version = "0.5.8", features = ["actix-compat"] }
#dotenv_codegen = "0.15.0"
dotenvy_macro = "0.15.7"
dotenvy = "0.15.7"
fastdate = "0.3.28"
fuser = { version = "0.14.0" }
futures = "0.3.30"
futures-util = { version = "0.3.30" }
libc = "0.2.153"
libloading = "0.8.3"
log = "0.4.21"
log4rs = "1.3.0"
mime = "0.3.17"
nfsserve = "0.10.1"
once_cell = "1.19.0"
openssh = { version = "0.10.3", features = ["native-mux"] }
openssh-sftp-client = { version = "0.14.1", features = ["openssh"] }
openssl = { version = "0.10.64" }
rand = "0.8.5"
rbatis = { version = "4.5.21" }
rbdc-sqlite = { version = "=4.5.2" }
rbs = { version = "4.5.13" }
reqwest = { version = "0.11.27", features = ["stream", "multipart", "json"] }
reqwest-middleware = "0.2.5"
rust-crypto = "0.2.36"
serde = { version = "1.0.197", features = ["derive"] }
serde_derive = "1.0.197"
serde_json = "1.0.115"
serde_yaml = "0.9.33"
signal-hook = "0.3.17"
static-files = "0.2.3"
strum = "0.26.2"
strum_macros = "0.26.2"
task-local-extensions = "0.1.4"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "signal", "rt", "macros"] }
tokio-cron-scheduler = "0.10.0"
urlencoding = "2.1.3"
uuid = "1.8.0"
vcpkg = "0.2.15"
