[package]
name = "cloud"
version = "0.1.0-SNAPSHOT"
edition = "2021"
license = "MFT"
description = "cloud"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
default-run = "cloud"
build = "build.rs"
[[bin]]
name = "cloud"
test = false
bench = false
[dependencies]
actix-web = "4.3.1"
actix-files = "0.6.2"
actix-cors = "0.6.4"
mime = "0.3.17"
actix-identity = "0.5.2"
rand = "0.8.5"
async-trait = "0.1.73"
reqwest-middleware = "0.2.3"
reqwest = { version = "0.11.20", features = ["stream", "multipart", "json"] }
serde_json = "1.0.105"
serde_yaml = "0.9.25"
serde = { version = "1.0.188", features = ["derive"] }
serde_derive = "1.0.188"
task-local-extensions = "0.1.4"
tokio = { version = "1.28.2", features = ["rt-multi-thread", "signal"] }
chrono = { version = "0.4.28", features = ["serde"] }
futures = "0.3.28"
anyhow = "1.0.75"
uuid = "1.4.1"
log = "0.4.20"
log4rs = "1.2.0"
rust-crypto = "0.2.36"
libc = "0.2.147"
bytes = "1.4.0"
thread_local = "1.1.7"
dotenv = "0.15.0"
openssl = { version = "0.10.57" }
rbs = { version = "4.3.3" }
rbatis = { version = "4.3.15" }
rbdc-sqlite = { version = "4.3.12" }
#threads_pool = "^0.2.0"
#lru = "0.7.5"
signal-hook = "0.3.17"
quartz_sched = "0.1.11"
urlencoding = "2.1.3"
once_cell = "1.17.2"
async-recursion = "1.0.5"
dav-server = { version = "0.5.7", features = ["actix-compat"] }
futures-util = { version = "0.3.28" }
cloud-ui = { path = "../cloud-ui" }
[target.'cfg(not(windows))'.dependencies]
fuser = { version = "0.13.0" }
users = "0.11.0"
[target.'cfg(windows)'.dependencies]
ctrlc  = "3.2.3"
[build-dependencies]
vcpkg = "0.2.15"

[package.metadata.deb]
name = "cloudfs"
license-file = ["LICENSE", "4"]

maintainer = "Han <calm0406@163.com>"
copyright = "2023, Han <calm0406@163.com>"
assets = [
    ["target/release/cloud", "usr/local/cloudfs/cloud", "755"],
    ["support/systemd.service", "/lib/systemd/system/cloudfs.service", "644"],
    ["log4rs.yaml", "/usr/local/cloudfs/", "644"],
]
maintainer-scripts = "scripts/"
systemd-units = { enable = true }
#[profile.release]
#strip = true
#opt-level = "z"
#lto = true
