[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.197"
bytes = "1.5.0"
mime = "0.3.17"
serde_json = "1.0.114"
actix-web = "4.5.1"
reqwest = "0.12.0"
async-ssh2-lite = { version = "0.4.7", features = ["tokio", "async-io"] }
rbatis = { version = "4.5.21" }
