[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_derive = { workspace = true }
bytes = { workspace = true }
mime = { workspace = true }
serde_json = { workspace = true }
actix-web = { workspace = true }
reqwest = { workspace = true }
async-ssh2-lite = { workspace = true, features = ["tokio", "async-io"] }
#rbatis = { workspace = true }
sqlx = { workspace = true }
libloading = { workspace = true }
