[package]
name = "cloud-ui"
version = "0.1.0-SNAPSHOT"
edition = "2021"
license = "MFT"
description = "cloud-ui"
build = "build.rs"
[lib]
crate-type = ["lib", "cdylib", "staticlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "4.5.1"
actix-web-static-files = "4.0.1"
static-files = "0.2.3"
api = { path = "../api" }

[build-dependencies]
static-files = "0.2.3"
#[profile.release]
#strip = true
#opt-level = "z"
#lto = true
