[package]
name = "cloud-ui"
version = "0.1.0-SNAPSHOT"
edition = "2021"
license = "MFT"
description = "cloud-ui"
build = "build.rs"
[lib]
crate-type = ["lib", "cdylib", "staticlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = { workspace = true }
actix-web-static-files = { workspace = true }
static-files = { workspace = true }
api = { path = "../api" }

[build-dependencies]
static-files = { workspace = true }
#[profile.release]
#strip = true
#opt-level = "z"
#lto = true
