[package]
name = "persistence"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
rbs = { version = "4.5.13" }
rbatis = { version = "4.5.21" }
strum = "0.26.2"
strum_macros = "0.26.2"
log = "0.4.21"
serde_yaml = "0.9.33"

