[package]
name = "persistence"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "../api" }
serde = { workspace = true, features = ["derive"] }
rbs = { workspace = true }
rbatis = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
log = { workspace = true }
serde_yaml = { workspace = true }

