[package]
name = "plugin-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "../api" }
libloading = { workspace = true }
once_cell = { workspace = true }
log = { workspace = true }
