[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
persistence = { path = "../persistence" }
api = { path = "../api" }
log = "0.4.21"
once_cell = "1.19.0"
rbs = { version = "4.5.13" }
rbatis = { version = "4.5.21" }
rbdc-sqlite = { version = "=4.5.2" }
async-recursion = "1.1.0"
chrono = "0.4.35"
serde = { version = "1.0", features = ["derive"] }
