[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
persistence = { path = "../persistence" }
api = { path = "../api" }
log = { workspace = true }
once_cell = { workspace = true }
#rbs = { workspace = true }
#rbatis = { workspace = true }
#rbdc-sqlite = { workspace = true }
async-recursion = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sqlx = {workspace = true, features = ["derive"] }
sqlx-sqlite = {workspace = true}
tokio = {workspace = true}
